--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,37 +13,37 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>Ilya Voytov</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				I'm a Senior Vice President at Lazard Asset Management, working on Quant Research. 
+				My focus is on developing alpha models to be used in trading global equities.
+				Our strategy is long-only with medium frequency turnover.
+				I've been living in New York City since 2020.
 			</p>
 			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+				I've previously spent 13 years as Head of Research at Vector Capital in San Francisco.
+				While there, I focused on identifying special situations and catalyst-driven investments 
+				in high yield and syndicated loan markets. I have experience in long/short investing across 
+				variety of industries and geographies.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
+			<p>
+				I started my career at JPMorgan's investment bank. My office was on the 5th floor of the
+				original 270 Park Ave tower, now demolished and replaced with a wonderful new building 
+				for JPM's global headquarters. 
+			</p>
+			<p>
+				I'm an avid runner and a member of <a href="https://www.newyorkharriers.com">New York Harriers</a> running club.
+				I participate in running competitions through the year.
+			</p>
+			<p>Here are my active tech projects:</p>
 			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+				<li><a href="https://ivoytov.github.io/forqloz">NYC Foreclosure Auction Tracker</a></li>
+				<li><a href="https://ivoytov.github.io/manhattan>NYC Real Estate Repeat Sales Index</a></li>
 			</ul>
 			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
+				
 			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+
 		</main>
 		<Footer />
 	</body>
