fix unterminated string

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,10 +38,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<p>Here are my active tech projects:</p>
 			<ul>
 				<li><a href="https://ivoytov.github.io/forqloz">NYC Foreclosure Auction Tracker</a></li>
-				<li><a href="https://ivoytov.github.io/manhattan>NYC Real Estate Repeat Sales Index</a></li>
+				<li><a href="https://ivoytov.github.io/manhattan">NYC Real Estate Repeat Sales Index</a></li>
 			</ul>
 			<p>
-				
+				You can reach me at <a href="https://www.threads.com/@goilya">@goilya on Threads</a> or 
+				email me at <a href="mailto:ilya@voytov.com">ilya@voytov.com</a>.
 			</p>
 
 		</main>
