converting old blog to new

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</p>
 			<p>
 				I'm an avid runner and a member of <a href="https://www.newyorkharriers.com">New York Harriers</a> running club.
-				I participate in running competitions through the year.
+				I participate in running competitions through the year. I also like surfing in the Rockaways. 
+				My favorite building is the IAC Headquarters.
 			</p>
 			<p>Here are my active tech projects:</p>
 			<ul>
